Add product SKU code, Tailwind CSS configuration, and initial API client setup; enhance authentication and product management features