@@ -1,17 +1,18 @@
 package com.vihaanthat.gateway.config;
 
+import java.util.Arrays;
+import java.util.List;
+
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.http.HttpMethod;
-
-import java.util.Arrays;
-import java.util.List;
+import org.springframework.security.oauth2.jwt.JwtDecoder;
 
 @Configuration
 public class SecurityConfig {
@@ -52,6 +53,7 @@ public class SecurityConfig {
         // Permit the Swagger/OpenAPI endpoints (GET requests) and require authentication for everything else.
         // Also disable CSRF (Swagger UI won't send CSRF tokens) and keep resource server JWT enabled.
         return httpSecurity
+                .cors(Customizer.withDefaults()) // Enable CORS
                 .authorizeHttpRequests(authorize -> authorize
                         .requestMatchers(HttpMethod.GET, freeResourceUrls).permitAll()
                         .anyRequest().authenticated()
@@ -64,9 +66,11 @@ public class SecurityConfig {
    @Bean
    CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET","POST","OPTIONS"));
+        configuration.setAllowedOrigins(List.of("http://localhost:3000"));
+        configuration.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE","OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
